--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow */
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
+                box-shadow: 0 0 30px rgba(204, 94, 255, 1); /* Glow effect */
             }
         }
 
@@ -119,8 +119,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
-            border: 4px solid rgba(204, 94, 255, 0.8); /* Border color */
+            box-shadow: 0 0 30px rgba(204, 94, 255, 1); /* Stronger glow effect */
+            border: 4px solid rgba(204, 94, 255, 1); /* Border color */
         }
 
         .profile-picture img {
