--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         </header>
         <div class="content">
             <div class="profile-picture">
-                <img src="449678496_1016121393551164_244338954380778760_n.jpg" alt="Profile Picture">
+                <img src="Main Avatar.jpg" alt="Profile Picture">
                 <div class="fire-animation"></div>
             </div>            
             <div class="intro">
