--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
+    <link rel="icon" href="Clove Icon.ico" type="image/x-icon">
     <style>
         @font-face {
             font-family: 'Brams';
