--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 0 30px rgba(204, 94, 255, 1); /* Stronger glow effect */
-            border: 4px solid rgba(204, 94, 255, 1); /* Border color */
         }
 
         .profile-picture img {
@@ -149,6 +147,26 @@
             100% {
                 transform: scale(1.1);
                 opacity: 0;
+            }
+        }
+
+        .border-animation {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(204, 94, 255, 1);
+            animation: borderGlow 2s infinite alternate;
+        }
+
+        @keyframes borderGlow {
+            0% {
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0.5);
+            }
+            100% {
+                box-shadow: 0 0 20px rgba(204, 94, 255, 1);
             }
         }
 
@@ -319,6 +337,7 @@
             <div class="profile-picture">
                 <img src="Main Avatar.jpg" alt="Profile Picture">
                 <div class="fire-animation"></div>
+                <div class="border-animation"></div>
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
