--- a/index.html
+++ b/index.html
@@ -288,10 +288,11 @@
             }
 
             .profile-picture {
-                max-width: 40vw; /* Increase profile picture size on smaller screens */
+                max-width: 40vw; /* Increase profile picture size */
+                margin-bottom: 20px; /* Increase bottom margin */
             }
 
-            .intro p {
+            .intro h2 {
                 font-size: 2em; /* Decrease font size */
             }
 
