--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            animation: glow 2s ease-in-out infinite alternate; /* Glowing animation */
         }
 
         .profile-picture img {
@@ -150,23 +151,12 @@
             }
         }
 
-        .border-animation {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            box-shadow: 0 0 10px rgba(204, 94, 255, 1);
-            animation: borderGlow 2s infinite alternate;
-        }
-
-        @keyframes borderGlow {
+        @keyframes glow {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0.5);
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.5);
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 1);
+                box-shadow: 0 0 50px rgba(204, 94, 255, 1);
             }
         }
 
@@ -288,11 +278,10 @@
             }
 
             .profile-picture {
-                max-width: 40vw; /* Increase profile picture size */
-                margin-bottom: 20px; /* Increase bottom margin */
+                max-width: 40vw; /* Increase profile picture size on smaller screens */
             }
 
-            .intro h2 {
+            .intro p {
                 font-size: 2em; /* Decrease font size */
             }
 
@@ -338,7 +327,6 @@
             <div class="profile-picture">
                 <img src="Main Avatar.jpg" alt="Profile Picture">
                 <div class="fire-animation"></div>
-                <div class="border-animation"></div>
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
