--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            border: 1px solid rgba(204, 94, 255, 1); /* Solid 1px pink border */
             animation: glow 2s ease-in-out infinite alternate; /* Glowing animation */
         }
 
@@ -290,8 +291,12 @@
             }
 
             .links a {
-                font-size: 1.5em; /* Decrease font size */
-                padding: 10px 20px; /* Adjust padding */
+                font-size: 2em; /* Decrease font size */
+                padding: 5px 8px; /* Reduce padding */
+            }
+
+            header {
+                padding: 10px; /* Reduce header padding */
             }
 
             header h1 {
